classDiagram
    direction TB

    class UserAccount {
      +Guid Id
      +string Name
      +string Email
      +string Role
      +bool MfaEnabled
    }
    class SocialProfile {
      +Guid UserId
      +string DisplayName
      +string Bio
      +string City
      +string PhotoUrl
    }
    class VehicleProfile {
      +Guid Id
      +string Brand
      +string Model
      +FuelKind FuelKind
      +double AverageConsumption
      +int CurrentLevelPercent
    }
    class VehicleActivity {
      +Guid VehicleId
      +string Type
      +double Quantity
      +decimal Cost
      +int LevelAfter
      +DateTime CreatedAt
    }
    class PlannedRoute {
      +Guid VehicleId
      +string Origin
      +string Destination
      +double DistanceKm
      +decimal EstimatedTotalCost
      +int ArrivalLevelPercent
    }
    class FuelStation {
      +string Brand
      +FuelKind FuelKind
      +decimal Price
      +double Latitude
      +double Longitude
    }
    class CollaborativeTrip {
      +Guid OwnerId
      +string Participants
      +string Status
      +decimal SplitAmount
      +DateTime StartedAt
    }
    class DirectMessage {
      +Guid SenderId
      +Guid ReceiverId
      +string Body
      +DateTime CreatedAt
      +Guid RelatedTripId
    }

    UserAccount "1" *-- "1" SocialProfile : possui
    UserAccount "1" *-- "0..*" VehicleProfile : gere
    UserAccount "1" --> "0..*" PlannedRoute : planeia
    VehicleProfile "1" *-- "0..*" VehicleActivity : histórico
    PlannedRoute "0..*" --> "0..*" FuelStation : sugere
    PlannedRoute "1" --> "0..1" CollaborativeTrip : partilhada como
    CollaborativeTrip "1" *-- "0..*" DirectMessage : comunicação
